Correct widget button text spacing
- Fixed, widget button icon and text not being spaced between each
other.

--- a/src/MvcTemplate.Web/wwwroot/Content/Shared/widget-box.less
+++ b/src/MvcTemplate.Web/wwwroot/Content/Shared/widget-box.less
@@ -49,7 +49,7 @@
             }
 
             > i + .text {
-                padding-right: 5px;
+                padding-left: 5px;
             }
         }
     }
